Updated Production Description in Assembly

--- a/src/PureActive.Archive/PureActive.Archive.csproj
+++ b/src/PureActive.Archive/PureActive.Archive.csproj
@@ -10,6 +10,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Archive Libraries</Title>
+	<AssemblyTitle>PureActive Archive Libraries</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
