--- a/src/PureActive.Logging.Abstractions/PureActive.Logging.Abstractions.csproj
+++ b/src/PureActive.Logging.Abstractions/PureActive.Logging.Abstractions.csproj
@@ -10,6 +10,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Logging Abstractions</Title>
+	<AssemblyTitle>PureActive Logging Abstractions</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
