--- a/src/PureActive.Network.Services.DhcpService/PureActive.Network.Services.DhcpService.csproj
+++ b/src/PureActive.Network.Services.DhcpService/PureActive.Network.Services.DhcpService.csproj
@@ -11,7 +11,8 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Network Dhcp Service</Title>
-
+    <AssemblyTitle>PureActive Network Dhcp Service</AssemblyTitle>
+	
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
 
