--- a/src/PureActive.Network.Services.NetworkMap/PureActive.Network.Services.NetworkMap.csproj
+++ b/src/PureActive.Network.Services.NetworkMap/PureActive.Network.Services.NetworkMap.csproj
@@ -9,6 +9,8 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Network Map Service</Title>
+	<AssemblyTitle>PureActive Network Map Service</AssemblyTitle>
+
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
