--- a/src/PureActive.Archive.Abstractions/PureActive.Archive.Abstractions.csproj
+++ b/src/PureActive.Archive.Abstractions/PureActive.Archive.Abstractions.csproj
@@ -10,6 +10,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Archive Abstractions</Title>
+	<AssemblyTitle>PureActive Archive Abstractions</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
