--- a/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
+++ b/src/PureActive.Core.Abstractions/PureActive.Core.Abstractions.csproj
@@ -10,7 +10,8 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Core Abstractions</Title>
-
+    <AssemblyTitle>PureActive Core Abstractions</AssemblyTitle>
+	
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>  
   </PropertyGroup>
 
