--- a/src/PureActive.Core.Reactive/PureActive.Core.Reactive.csproj
+++ b/src/PureActive.Core.Reactive/PureActive.Core.Reactive.csproj
@@ -10,6 +10,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Core Reactive</Title>
+    <AssemblyTitle>PureActive Core Reactive</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
