--- a/src/PureActive.Core/PureActive.Core.csproj
+++ b/src/PureActive.Core/PureActive.Core.csproj
@@ -10,6 +10,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Core Libraries</Title>
+    <AssemblyTitle>PureActive Core Libraries</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
