--- a/src/PureActive.Logger.Provider.ApplicationInsights/PureActive.Logger.Provider.ApplicationInsights.csproj
+++ b/src/PureActive.Logger.Provider.ApplicationInsights/PureActive.Logger.Provider.ApplicationInsights.csproj
@@ -10,6 +10,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Application Insights Logger Provider</Title>
+    <AssemblyTitle>PureActive Application Insights Logger Provider</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
