--- a/src/PureActive.Network.Abstractions/PureActive.Network.Abstractions.csproj
+++ b/src/PureActive.Network.Abstractions/PureActive.Network.Abstractions.csproj
@@ -10,6 +10,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Network Abstractions</Title>
+	<AssemblyTitle>PureActive Network Abstractions</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
