--- a/src/PureActive.Network.Services.ArpService/PureActive.Network.Services.ArpService.csproj
+++ b/src/PureActive.Network.Services.ArpService/PureActive.Network.Services.ArpService.csproj
@@ -11,6 +11,7 @@
     <SignAssembly>true</SignAssembly>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>PureActive Network Arp Service</Title>
+    <AssemblyTitle>PureActive Network Arp Service</AssemblyTitle>
 
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
