--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <PackageReference Include="Nerdbank.GitVersioning">
-      <Version>2.2.13</Version>
+      <Version>2.2.33</Version>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
@@ -12,7 +12,7 @@
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb;.xml;*.json</AllowedOutputExtensionsInPackageBuildOutputFolder>
 
     <Authors>Steve Bush</Authors>
-    <Company>BushChang</Company>
+    <Company>BushChang Corporation</Company>
     <Copyright>© 2018 BushChang Corporation. All rights reserved.</Copyright>
     <NuspecProperties>$(NuspecProperties);owners=PureActive</NuspecProperties>
     <Owners>PureActive</Owners>
