--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -22,6 +22,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/PureActive/PureActive</RepositoryUrl>
+    <NoWarn>$(NoWarn);NU5125</NoWarn>
   </PropertyGroup>
 
   <Target Name="FreshClean" BeforeTargets="Clean">
