--- a/src/PureActive.Hosting/PureActive.Hosting.csproj
+++ b/src/PureActive.Hosting/PureActive.Hosting.csproj
@@ -15,6 +15,10 @@
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);CS8002</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AsyncFriendlyStackTrace" Version="1.6.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
