--- a/src/PureActive.Queue.Hangfire/PureActive.Queue.Hangfire.csproj
+++ b/src/PureActive.Queue.Hangfire/PureActive.Queue.Hangfire.csproj
@@ -15,6 +15,10 @@
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);CS8002</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.6.21" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.6.21" />
