--- a/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
+++ b/src/PureActive.Serilog.Sink.Xunit/PureActive.Serilog.Sink.Xunit.csproj
@@ -15,6 +15,10 @@
     <PackageReleaseNotes>Bug fixes and performance improvements.</PackageReleaseNotes>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);CS8002</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AsyncFriendlyStackTrace" Version="1.6.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
