--- a/test/PureActive.Core.Reactive.UnitTests/PureActive.Core.Reactive.UnitTests.csproj
+++ b/test/PureActive.Core.Reactive.UnitTests/PureActive.Core.Reactive.UnitTests.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\..\src\PureActive.Core.Abstractions\PureActive.Core.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Core.Reactive\PureActive.Core.Reactive.csproj" />
     <ProjectReference Include="..\..\src\PureActive.Core\PureActive.Core.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Serilog.Sink.Xunit\PureActive.Serilog.Sink.Xunit.csproj" />
   </ItemGroup>
 
   <ItemGroup>
