--- a/test/PureActive.Email.UnitTests/PureActive.Email.UnitTests.csproj
+++ b/test/PureActive.Email.UnitTests/PureActive.Email.UnitTests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\PureActive.Email.Office365\PureActive.Email.Office365.csproj" />
+    <ProjectReference Include="..\..\src\PureActive.Serilog.Sink.Xunit\PureActive.Serilog.Sink.Xunit.csproj" />
   </ItemGroup>
 
   <ItemGroup>
