Archive Unit Tests

--- a/test/PureActive.Archive.UnitTests/PureActive.Archive.UnitTests.csproj
+++ b/test/PureActive.Archive.UnitTests/PureActive.Archive.UnitTests.csproj
@@ -26,6 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Files\KdTree.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
