--- a/src/PureActive.Queue.Hangfire/PureActive.Queue.Hangfire.csproj
+++ b/src/PureActive.Queue.Hangfire/PureActive.Queue.Hangfire.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.6.21" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.6.21" />
+    <PackageReference Include="Hangfire.Autofac" Version="2.3.1" />
     <PackageReference Include="Hangfire.SQLite" Version="1.4.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
