--- a/test/PureActive.Queue.Hangfire.IntegrationTests/PureActive.Queue.Hangfire.IntegrationTests.csproj
+++ b/test/PureActive.Queue.Hangfire.IntegrationTests/PureActive.Queue.Hangfire.IntegrationTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.5.3" />
+    <PackageReference Include="Hangfire.Autofac" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.1" />
